--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="reports/CS491_AnalysisReport_Laber.pdf">Second Report</a></h4>
+              <h4><a href="reports/CS491_AnalysisReport_Laber.pdf">Analysis Report</a></h4>
               <p>Explanation of the report</p>
             </div>
           </div>
