--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4><a href="reports/CS491_AnalysisReport_Laber.pdf">Analysis Report</a></h4>
-              <p>Explanation of the report</p>
+              <p>Second report</p>
             </div>
           </div>
 
