--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 
           <div class="col-lg-6">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/p01_1.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Emin Adem Buran</h4>
                 <span>CS Student</span>
@@ -435,7 +435,7 @@
 
           <div class="col-lg-6 mt-4 mt-lg-0">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
-              <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/p01_5.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Melisa Taşpınar</h4>
                 <span>CS Student</span>
@@ -452,7 +452,7 @@
 
           <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/p01_3.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Mustafa Hakan Kara</h4>
                 <span>CS Student</span>
@@ -469,7 +469,7 @@
 
           <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
-              <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/p01_4.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Onur Oruç</h4>
                 <span>CS Student</span>
@@ -486,7 +486,7 @@
 
           <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
-              <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/p01_2.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Yiğit Gürses</h4>
                 <span>CS Student</span>
