--- a/index.html
+++ b/index.html
@@ -151,13 +151,11 @@
 
             <div class="accordion-list">
               <iframe width="1120" height="630"
-                src="https://www.youtube.com/watch?v=PQJ7lK9H8vE&ab_channel=EminAdemBuran">
+                src="https://www.youtube.com/watch?v=PQJ7lK9H8vE">
               </iframe>
             </div>
 
           </div>
-
-          <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img" style='background-image: url("assets/img/why-us.png");' data-aos="zoom-in" data-aos-delay="150">&nbsp;</div>
         </div>
 
       </div>
