--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
 
           <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch  order-2 order-lg-1">
 
-            <div class="content">
-              <h3><strong>  Demo </strong></h3>
+            <div class="section-title">
+                <h2>About Us</h2>
             </div>
 
             <div class="accordion-list">
