--- a/index.html
+++ b/index.html
@@ -139,14 +139,10 @@
 
     <!-- ======= Why Us Section ======= -->
     <section id="why-us" class="why-us section-bg">
-      <div class="container-fluid" data-aos="fade-up">
-
-        <div class="row">
-
-          <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch  order-2 order-lg-1">
+      <div class="container" data-aos="fade-up">
 
             <div class="section-title">
-                <h2>About Us</h2>
+                <h2>DEMO</h2>
             </div>
 
             <div class="accordion-list">
@@ -154,9 +150,6 @@
                 src="https://www.youtube.com/watch?v=PQJ7lK9H8vE">
               </iframe>
             </div>
-
-          </div>
-        </div>
 
       </div>
     </section><!-- End Why Us Section -->
