--- a/index.html
+++ b/index.html
@@ -146,9 +146,7 @@
             </div>
 
             <div class="accordion-list">
-              <iframe width="1120" height="630"
-                src="https://www.youtube.com/watch?v=PQJ7lK9H8vE">
-              </iframe>
+              <iframe width="1120" height="630" src="https://www.youtube.com/embed/PQJ7lK9H8vE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
       </div>
