--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-          <h1>LABER - Real Time Social Media Analysis Project</h1>
+          <h1>Real Time Social Media Analysis Application</h1>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started scrollto">About Us</a>
           </div>
