--- a/index.html
+++ b/index.html
@@ -242,7 +242,23 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4><a href="reports/LowLevelDesignReport_Laber.pdf">Low Level Design Report</a></h4>
-              <p>Explanation of the report</p>
+              <p>Fourth report</p>
+            </div>
+          </div>
+          
+           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-file"></i></div>
+              <h4><a href="reports/CS492_FinalReport_Laber_p01.pdf">Final Report</a></h4>
+              <p>Fifth report</p>
+            </div>
+          </div>
+          
+           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-file"></i></div>
+              <h4><a href="reports/p01.pdf">Poster</a></h4>
+              <p>Sixth report</p>
             </div>
           </div>
 
