--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4><a href="reports/p01.pdf">Poster</a></h4>
-              <p>Sixth report</p>
+              <p>Project Poster</p>
             </div>
           </div>
 
